# PySoccer

./: .editorconfig  CONTRIBUTING.md  README.md  pyproject.toml  teste.py
PySoccer/constants/: UrlsLeagues.py
PySoccer/models/: Leaderboard.py  TeamOnLeaderboard.py
__tests__/: test_test.py
py-football-data/constants/: URLs.py
py_football_data/constants/: UrlsLeagues.py  urls.py
py_football_data/leagues/: Brasil.py  League.py  LeagueBase.py  Spain.py
py_football_data/models/: Leaderboard.py
py_football_data/utils/: api.py
