[tool.poetry]
name = "py-footaball-data"
version = "0.1.0"
description = "Library to access data from the main leagues in the world of world football."
authors = ["Rich <richelton14@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "beautifulsoup4"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flake8 = "^3.8.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
